# tinyrenderer

./: .gitignore  .nvimrc  Cargo.toml  Dockerfile  Makefile.toml  Procfile  README.md  TODO.md  rust-toolchain.toml
assets/: houdini.hiplc
benches/: render_benchmark.rs
examples/: circle.rs  draw_code.rs  graph.rs  line.rs  shapes.rs  syntax_playground.rs  triangle.rs
native-display/: Cargo.toml
native-display/src/: lib.rs  main.rs
src/: bounding_box.rs  bounds.rs  camera.rs  canvas.rs  circle.rs  color.rs  digit.rs  display.rs  draw_at.rs  draw_cmd.rs  draw_commands.rs  drawable.rs  face.rs  fillable.rs  image.rs  image_buffer.rs  lerp.rs  lib.rs  line.rs  main.rs  math.rs  model_file.rs  point.rs  render.rs  rendering_traits.rs  test_helper.rs  triangle.rs  utils.rs  vector.rs  vertex.rs  xy.rs
src/image/: image_buffer.rs  pt.rs  px.rs  scalar.rs  traits.rs  xy.rs
src/triangle/: barycentric.rs  fillable.rs
src/vertex/: normalized_vertices.rs
tests/: common.rs  integration_tests.rs
tests/integration/: common.rs  main.rs
web/: Cargo.toml  Trunk.toml  index.html
web-server/: Cargo.toml
web-server/src/: main.rs
web/src/: canvas.rs  canvas_demo.rs  lib.rs  main.rs  web_canvas.rs
