[package]
name = "tinyrenderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

["dependencies"]
image_lib = {version = "0.23.14", package ="image" }
regex = "1.5.4"
lazy_static = "1.4.0"
show-image = "0.9.3"


[[bench]]
name = "render_benchmark"
harness = false
