[package]
name = "tinyrenderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

["dependencies"]
image_lib = {version = "0.23.14", package ="image" }
regex = "1.5.4"
lazy_static = "1.4.0"
show-image = {version = "0.9.5", features=["image", "macros"]}
rand = "0.8.4"

[dev-dependencies]
criterion = "0.3" #version 0.3.5 is conflicting websys versions with show-image for some reason.. this sems to install 0.3.4 and work.. be on the lookout for an upgraded that works --spd

[[bench]]
name = "render_benchmark"
harness = false
