[package]
name = "tinyrenderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
native_image_render = ["show-image"]

["dependencies"]
image_lib = { version = "0.23.14", package = "image" }
regex = "1.5.4"
lazy_static = "1.4.0"
show-image = { version = "0.9.5", features = ["image", "macros"], optional = true} #not working with one of wgpu web-sys or seed
rand = "0.8.4"
nalgebra = "0.29.0"
quicli = "0.4.0"
structopt = "0.3.23"

[dev-dependencies]
criterion = "0.3"           #version 0.3.5 is conflicting websys versions with show-image for some reason.. this sems to install 0.3.4 and work.. be on the lookout for an upgraded that works --spd
pretty_assertions = "1.0.0"
all_asserts = "2.3.0"
cargo-make = "0.35.1"


[[bench]]
name = "render_benchmark"
harness = false

[workspace]
members = ["web"]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
